2010-07-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/conf.c:
	  Renamed MUNGE_GROUP_UPDATE_TIMER to MUNGE_GROUP_UPDATE_SECS.
	* src/munged/conf.c, src/munged/conf.h, src/munged/munged.c:
	  Renamed gids_interval to gids_update_secs in struct conf.

	* src/munged/conf.h: Tweaked struct conf comment for def_ttl & max_ttl.

2010-07-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/munge.3.in: Tweaked munge(3) manpage name.

	* config/x_ac_check_pthreads.m4: Tweaked description.

2010-05-23  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v3_format.txt: Twiddled quote marks.

	* README: Tweaked usage text.

2010-05-19  Chris Dunlap  <cdunlap@llnl.gov>

	* README, src/libcommon/munge.7.in: Updated overview text,
	  breaking OVERVIEW section into USAGE and DETAILS.

2010-04-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated homepage URL.

2010-03-23  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.9.

	* HISTORY, META, NEWS: Updated for 0.5.9 release.

	* PLATFORMS: Added kernel release info for GNU/kFreeBSD.

	* config/x_ac_select_auth_method.m4, PLATFORMS: Renamed Solaris
	  references to SunOS in order to be consistent with uname output.

	* config/config.guess, config/config.sub:
	  Updated via autotools-dev-20100122.1.

	* src/etc/munge.sysconfig: Removed svn id keyword.

	* Makefile.am, src/Makefile.am, src/etc/Makefile.am,
	  src/libcommon/Makefile.am, src/libmissing/Makefile.am,
	  src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am, config/Make-inc.mk:
	  Added copyleft boilerplate.

2010-03-16  Chris Dunlap  <cdunlap@llnl.gov>

	* PLATFORMS: Updated.

	* README: Added license info.

2010-03-15  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Tweaked platform comment for
	  AUTH_METHOD_LOCAL_PEERCRED.

2010-03-11  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Tweaked formatting.

	* config/x_ac_select_auth_method.m4: Tweaked platform comment for